@@ -13,25 +13,52 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>13.0.2</version>
+            <version>14.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>13.0.2</version>
+            <version>14.0.2</version>
         </dependency>
         
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-base</artifactId>
-            <version>13.0.2</version>
+            <version>14.0.2</version>
         </dependency>
         <dependency>
-    <groupId>org.graalvm.sdk</groupId>
-    <artifactId>graal-sdk</artifactId>
-    <version>20.2.0</version>
-    <scope>provided</scope>
-</dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.0.2</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.1</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.jfxtras</groupId>
+            <artifactId>jfxtras-common</artifactId>
+            <version>10.0-r1</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx-icons525</artifactId>
+            <version>4.2.0-9.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx-weathericons</artifactId>
+            <version>2.0.10-9.1.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -43,31 +70,43 @@
                     <release>11</release>
                 </configuration>
             </plugin>
-            <!--
-            to use the native image plugin' from CMD set the environment variable of maven like so:
-             MAVEN_OPTS='\-\-add-exports=java.base/jdk.internal.module=ALL-UNNAMED'
-            ***remove the backslash
-            -->
             <plugin>
-                <groupId>org.graalvm.nativeimage</groupId>
-                <artifactId>native-image-maven-plugin</artifactId>
-                <version>20.2.0</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
-                        <goals>
-                            <goal>native-image</goal>
-                        </goals>
                         <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>shadow.dental_chart.MainJar</mainClass>
+                                    <manifestEntries>
+                                        <Main-Class>shadow.dental_chart.MainJar</Main-Class>
+                                        <Build-Number>1</Build-Number>
+                                    </manifestEntries>
+                                </transformer>
+                            </transformers>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>module-info.class</exclude>
+                                        <exclude>META-INF/versions/9/module-info.class</exclude>
+                                        <!-- to get rid of bugs with signature files in dependencies -->
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <skip>false</skip>
-                    <imageName>first-native-image</imageName>
-                    <mainClass>shadow.dental_chart.App</mainClass>
-                    <buildArgs>
-                        --no-fallback
-                    </buildArgs>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
@@ -78,8 +117,6 @@
                     <options>
                         <option>--add-exports</option>
                         <option> javafx.graphics/com.sun.javafx.application=shadow.dental_chart</option>
-                        <option>--add-exports</option>
-                        <option>javafx.graphics/com.sun.javafx.application=shadow.dental_chart</option>
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.css.parser=shadow.dental_chart</option>
                     </options>
